permite aprovação de review

--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div>
     <%= form.label :movie_id, style: "display: block" %>
-    <%= form.select :movie_id, @all_movies, {}, {} %>
+    <%= form.select :movie_id, @all_movies %>
   </div>
 
   <div>
