--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -3,8 +3,13 @@
 <%= render @review %>
 
 <div>
-  <%= link_to "Edit this review", edit_review_path(@review) %> |
-  <%= link_to "Back to reviews", reviews_path %>
+  <p>
+    <%= button_to "Approve this review", :approve_review, params: {id:@review.id}, method: :patch %>
+  </p>
 
+  <%= link_to "Edit this review", edit_review_path(@review) %> |  
+  <%= link_to "Back to reviews", reviews_path %> |
+     
+  <br>
   <%= button_to "Destroy this review", @review, method: :delete %>
 </div>
