--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @movie, show_cast: true %>
+<%= render @movie, show_details: true %>
 
 <div>
   <%= link_to "Edit this movie", edit_movie_path(@movie) %> |
