ajusta alguns textos

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
 <footer>
+  <p>Developed by Klécia, Paulo and Anderson</p>
   <p>Projeto Inova.Ação Afro CESAR</p>
-  <p>Desenvolvido por Klécia, Paulo e Anderson</p>
 </footer>
