--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,8 +2,8 @@
   <h2>CESARFlix</h2>
 
   <nav>
-    <a href="/movies">Filmes</a> | 
-    <a href="/actors">Atrizes & Atores</a> | 
-    <a href="/reviews">Comentários</a>
+    <a href="/movies">Movies</a> | 
+    <a href="/actors">Actresses & Actors</a> | 
+    <a href="/reviews">Reviews</a>
   </nav>
 </header>
