adiciona logs de aprovação de comentário

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,7 @@
   <nav>
     <a href="/movies">Movies</a> | 
     <a href="/actors">Actresses & Actors</a> | 
-    <a href="/reviews">Reviews</a>
+    <a href="/reviews">Reviews</a> |
+    <a href="/logs">Logs</a>
   </nav>
 </header>
