--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New review</h1>
+<h1><%= t(:new_review) %></h1>
 
 <%= render "form", review: @review %>
 
 <br>
 
 <div>
-  <%= link_to "Back to reviews", reviews_path %>
+  <%= link_to t(:back_to_reviews), reviews_path %>
 </div>
