refactor: modifica o header da aplicação

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,36 @@
 <header>
-  <h2>CESARFlix</h2>
+  <nav class="bg-gray-800">  
+    <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
+      <div class="relative flex h-16 items-center justify-between">
+        <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
+          <div class="flex flex-shrink-0 items-center">
+            <img class="block h-8 w-auto lg:hidden" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500" alt="CESARFlix">
+            <img class="hidden h-8 w-auto lg:block" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500" alt="CESARFlix">
+            <%# <h2>CESARFlix</h2> %>
+          </div>
 
-  <nav>
-    <a href="/movies">Movies</a> | 
-    <a href="/actors">Actresses & Actors</a> | 
-    <a href="/reviews">Reviews</a> |
-    <a href="/logs">Logs</a>
+          <div class="hidden sm:ml-6 sm:block">
+            <div class="flex space-x-4">
+              <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+              <a href="/movies" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium" aria-current="page">
+                Movies
+              </a>
+
+              <a href="/actors" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">
+                Actresses & Actors
+              </a>
+
+              <a href="/reviews" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">
+                Reviews
+              </a>
+
+              <a href="/logs" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">
+                Logs
+              </a>
+            </div>
+          </div>
+        </div>      
+      </div>
+    </div>
   </nav>
 </header>
