--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -3,8 +3,8 @@
 <%= render @actor %>
 
 <div>
-  <%= link_to "Edit this actor", edit_actor_path(@actor) %> |
-  <%= link_to "Back to actors", actors_path %>
+  <%= link_to "Edit this actor", edit_actor_path(@actor), class: 'relative cursor-pointer rounded-md bg-white font-medium text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:text-indigo-500' %> |
+  <%= link_to "Back to actors", actors_path, class: 'relative cursor-pointer rounded-md bg-white font-medium text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:text-indigo-500' %>
 
-  <%= button_to "Destroy this actor", @actor, method: :delete %>
+  <%= button_to "Destroy this actor", @actor, method: :delete, class: 'inline-flex justify-center rounded-md border border-transparent bg-red-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2' %>
 </div>
