--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -7,9 +7,9 @@
     <%= button_to t(:approve_review), :approve_review, params: {id:@review.id}, method: :patch %>
   </p>
 
-  <%= link_to t(:edit_review), edit_review_path(@review) %> |  
-  <%= link_to t(:back_to_reviews), reviews_path %> |
+  <%= link_to t(:edit_review), edit_review_path(@review), class: 'relative cursor-pointer rounded-md bg-white font-medium text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:text-indigo-500' %> |  
+  <%= link_to t(:back_to_reviews), reviews_path, class: 'relative cursor-pointer rounded-md bg-white font-medium text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-500 focus-within:ring-offset-2 hover:text-indigo-500' %> |
      
   <br>
-  <%= button_to t(:destroy_review), @review, method: :delete %>
+  <%= button_to t(:destroy_review), @review, method: :delete, class: 'inline-flex justify-center rounded-md border border-transparent bg-red-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2' %>
 </div>
