--- a/app/views/actors/_form.html.erb
+++ b/app/views/actors/_form.html.erb
@@ -1,31 +1,19 @@
 <%= form_with(model: actor) do |form| %>
   <% if actor.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(actor.errors.count, "error") %> prohibited this actor from being saved:</h2>
-
-      <ul>
-        <% actor.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
+    <%= render 'layouts/error', entity: actor.class, errors: actor.errors%>
   <% end %>
-
   <div>
     <%= form.label :name, style: "display: block" %>
     <%= form.text_field :name %>
   </div>
-
   <div>
     <%= form.label :birth_year, style: "display: block" %>
     <%= form.number_field :birth_year %>
   </div>
-
   <div>
     <%= form.label :email, style: "display: block" %>
     <%= form.text_field :email %>
   </div>
-
   <div>
     <%= form.submit %>
   </div>
