--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,32 +1,21 @@
 <%= form_with(model: review) do |form| %>
   <% if review.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(review.errors.count, t(:error)) %> prohibited this review from being saved:</h2>
-
-      <ul>
-        <% review.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div>
-    <%= form.label :comment, style: "display: block" %>
-    <%= form.text_area :comment %>
+    <%= render 'layouts/error', entity: review.class, errors: review.errors%>
   </div>
-
-  <div>
-    <%= form.label :rating, style: "display: block" %>
-    <%= form.number_field :rating %>
-  </div>
-
-  <div>
-    <%= form.label :movie_id, style: "display: block" %>
-    <%= form.select :movie_id, @all_movies %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
+<% end %>
+<div>
+  <%= form.label :comment, style: "display: block" %>
+  <%= form.text_area :comment %>
+</div>
+<div>
+  <%= form.label :rating, style: "display: block" %>
+  <%= form.number_field :rating %>
+</div>
+<div>
+  <%= form.label :movie_id, style: "display: block" %>
+  <%= form.select :movie_id, @all_movies %>
+</div>
+<div>
+  <%= form.submit %>
+</div>
 <% end %>
